fix: Add text-shadow for better text visibility on meter

--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,7 @@
 
 .player-table {
   padding-bottom: 60px;
+  text-shadow: rgba(32, 29, 29, 0.8) 0px 1px 3px;
 }
 
 .text-left {
